received and send popup cancel button add

--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/ReceiveUserControl.xaml
@@ -24,6 +24,15 @@
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" Content="Receive" HorizontalAlignment="Center" FontWeight="DemiBold" VerticalAlignment="Center"  VerticalContentAlignment="Center" FontSize="15"
                     RenderTransformOrigin="0.515,-0.184" Margin="0,0,0,0" Width="94" />
+                <Button Click="HidePopup_Click" Background="Black" Foreground="White"
+                                VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" >
+
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="50"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
                 <!-- buttons   -->
                 <Button Grid.Row="1" x:Name="XelsButton" Content="XELS" Click="XelsButton_Click"    VerticalAlignment="Top"
                         Background="Green" RenderTransformOrigin="0.174,0.571" Margin="5,5,446,0" Height="32" >
@@ -52,13 +61,10 @@
                     </Button.Resources>
                 </Button>
                 <Frame  Grid.Row="2" Grid.RowSpan="4" x:Name="ReceiveContent" NavigationUIVisibility="Hidden" Margin="10,10,5,10" />
-                <Button Grid.Row="7" x:Name="Cancel" Click="Cancel_Click" Content="CANCEL"
-                        Background="Red"
-                        Foreground="White" Margin="10,24,451,25" >
-                </Button>
+               
                 <Button Grid.Row="7" x:Name="restoreButton" Click="restoreButton_Click" Content="OK"
                         Background="Green"
-                        Foreground="White" Margin="244,24,10,25" >
+                        Foreground="White" Margin="10,24,10,25" >
                 </Button>
             </Grid>
         </Border>
