--- a/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/BelsPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/ReceivePages/BelsPage.xaml
@@ -26,7 +26,7 @@
                     </Grid.ColumnDefinitions>
 
                     <Border  Grid.Column="0" >
-                        <TextBox  x:Name="textBoxTextToQr" IsReadOnly="True"  BorderBrush="Green" />
+                        <TextBox  x:Name="textBoxTextToQr" IsReadOnly="True"  BorderBrush="Green" BorderThickness="1" Padding="5" />
                     </Border>
 
                     <Border  Grid.Column="1">
