--- a/src/XelsDesktopWalletApp/Views/Pages/Modals/SendUserControl.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/Modals/SendUserControl.xaml
@@ -19,6 +19,15 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
                 <Label Grid.Row="0" Content="Send" HorizontalAlignment="Center"  FontSize="20" FontWeight="DemiBold" RenderTransformOrigin="0.515,-0.184" Width="54" Margin="0,-10,0,10" />
+                <Button Click="HidePopup_Click" Background="Black" Foreground="White"
+                                VerticalAlignment="Top" HorizontalAlignment="Right" Content="X" >
+
+                    <Button.Resources>
+                        <Style TargetType="{x:Type Border}">
+                            <Setter Property="CornerRadius" Value="50"/>
+                        </Style>
+                    </Button.Resources>
+                </Button>
                 <Button  Grid.Row="1" Content="XELS" Click="XELS_Button_Click"  
                         Background="Green" Foreground="White" RenderTransformOrigin="0.174,0.571" 
                         FontWeight="Normal" Margin="10,4,486,14">
