--- a/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
@@ -6,73 +6,73 @@
         xmlns:local="clr-namespace:XelsDesktopWalletApp.Views"
         mc:Ignorable="d"
          Height="600" Width="1100">
-    
-    
+
+
     <!--Border Padding="10"-->
     <StackPanel Margin="5,5,5,5">
-            <StackPanel>
+        <StackPanel>
 
             <Grid Background="Green" Margin="10" Height="100">
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*" />
-                    </Grid.ColumnDefinitions>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="*" />
+                </Grid.ColumnDefinitions>
 
-                    <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" Background="Transparent" BorderBrush="WhiteSmoke" 
+                <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" Background="Transparent" BorderBrush="WhiteSmoke" 
               BorderThickness="3" Margin="-2" CornerRadius="10" Padding="5">
-                        <Border.Effect>
-                            <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
-                        </Border.Effect>
-                        <Image Source="/Assets/Images/home-xels-logo-01.png" >
+                    <Border.Effect>
+                        <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
+                    </Border.Effect>
+                    <Image Source="/Assets/Images/home-xels-logo-01.png" >
 
-                        </Image>
-                    </Border>
-                </Grid>
-            </StackPanel>
+                    </Image>
+                </Border>
+            </Grid>
+        </StackPanel>
 
-            <TextBlock Background="White" Margin="0 10 10 0" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" TextDecorations="" Width="26" RenderTransformOrigin="0.51,0.144" Height="42">
+        <TextBlock Background="White" Margin="0 10 10 0" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" TextDecorations="" Width="46" RenderTransformOrigin="0.51,0.144" Height="27">
                 <Hyperlink  NavigateUri="http://www.google.com" RequestNavigate="Hyperlink_RequestNavigate" TextDecorations="">
                     <Hyperlink.Style>
                     <Style TargetType="{x:Type Hyperlink}"
                             BasedOn="{StaticResource {x:Type Hyperlink}}">
-                        <Setter Property="Foreground" Value="Black"/>
+                        <Setter Property="Foreground" Value="Blue"/>
                     </Style>
-                    </Hyperlink.Style><Run Text="back "/>
+                    </Hyperlink.Style><Run Text="BACK " FontSize="15"/>
                 </Hyperlink>
-            </TextBlock>
+        </TextBlock>
 
-            <TextBlock Margin="0,10,0,0" Width="104" Height="61" Text="Welcome" FontWeight="Bold"  FontSize="24" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light"/>
-            
+        <TextBlock Margin="0,10,0,0" Width="104" Height="61" Text="Welcome" FontWeight="Bold"  FontSize="24" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light"/>
+
         <TextBlock Width="462" FontSize="14" HorizontalAlignment="Center" Opacity="0.7" TextWrapping="Wrap">
                 If you would like to create a new wallet, please click <Bold>Create</Bold>.If you have used the wallet before, please select <Bold>Restore</Bold> to recover your old wallet.</TextBlock>
-             
-            <Grid Width="420" Margin="0,20,0,0">
 
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
+        <Grid Width="420" Margin="0,20,0,0">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="*" />
+            </Grid.ColumnDefinitions>
 
             <Button Width="200" x:Name="restoreWalletButton" Click="RestoreWalletButton_Click" Margin="0,0,10,0" Grid.Column="0" Content="Restore" Height="28" VerticalAlignment="Center" TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="Green" BorderThickness="1,1,1,1" BorderBrush="Green" FontSize="14" Padding="5,5,5,5" >
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
 
             <Button Width="200" x:Name="createButton" Click="createButton_Click" Grid.Column="1" Content="Create" TextBlock.FontFamily="Microsoft YaHei Light" Background="Green" FontFamily="Microsoft YaHei Light" BorderThickness="0,0,0,0" Foreground="White" FontSize="14" Padding="5,5,5,5">
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
+                <Button.Resources>
+                    <Style TargetType="Border">
+                        <Setter Property="CornerRadius" Value="5"/>
+                    </Style>
+                </Button.Resources>
+            </Button>
 
-            </Grid>
-        <Grid>           
-                <Frame x:Name="PageContent" />          
+        </Grid>
+        <Grid>
+            <Frame x:Name="PageContent" />
         </Grid>
     </StackPanel>
-    
+
     <!--</Border>-->
 </Window>
