--- a/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateOrRestore.xaml
@@ -11,8 +11,8 @@
     <!--Border Padding="10"-->
     <StackPanel Margin="5,5,5,5">
         <StackPanel>
-
-            <Grid Background="Green" Margin="10" Height="100">
+            <Border Height="109" Margin="5,5,5,5" Background="Green" CornerRadius="5">
+                <Grid Background="Green" Margin="10" Height="100">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
@@ -27,6 +27,7 @@
                     </Image>
                 </Border>
             </Grid>
+            </Border>
         </StackPanel>
 
         <TextBlock Background="White" Margin="0 10 10 0" HorizontalAlignment="Center" FontFamily="Microsoft YaHei Light" TextDecorations="" Width="46" RenderTransformOrigin="0.51,0.144" Height="27">
