--- a/src/XelsDesktopWalletApp/Views/CreateShowMnemonic.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateShowMnemonic.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="XelsDesktopWalletApp.Views.CreateShowMnemonic"
+﻿<Page x:Class="XelsDesktopWalletApp.Views.CreateShowMnemonic"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -10,8 +10,8 @@
     <StackPanel>
 
         <StackPanel>
-
-            <Grid Background="Green" Margin="10" Height="100">
+            <Border Margin="20 5" Background="Green" CornerRadius="5">
+            <Grid Background="Green" Margin="10" Height="100" Width="1010">
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
@@ -26,6 +26,7 @@
                     </Image>
                 </Border>
             </Grid>
+            </Border>
         </StackPanel>
 
         <Border Margin="10 10">
@@ -87,4 +88,4 @@
         </Border>
     </StackPanel>
 
-</Window>
+</Page>
