--- a/src/XelsDesktopWalletApp/Views/Pages/RestoreWalletPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/RestoreWalletPage.xaml
@@ -13,7 +13,7 @@
     <StackPanel Background="White">
 
 
-        <Border Margin="20 15">
+        <Border Margin="20 15" Width="731" Background="Green" CornerRadius="5">
             <Label  Content="Restore a wallet" 
                        HorizontalAlignment="Center"  
                        FontSize="20" FontWeight="Bold"
