--- a/src/XelsDesktopWalletApp/Views/CreateShowMnemonic.xaml
+++ b/src/XelsDesktopWalletApp/Views/CreateShowMnemonic.xaml
@@ -5,87 +5,89 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:XelsDesktopWalletApp.Views"
         mc:Ignorable="d"
-        Title="CreateShowMnemonic" Height="600" Width="1100">
+        Title="CreateShowMnemonic" Height="560" Width="1050">
+    <Border Margin="10,10,10,10" Background="White" BorderBrush="Green" BorderThickness="3" CornerRadius="10">
 
-    <StackPanel>
 
         <StackPanel>
-            <Border Margin="20 5" Background="Green" CornerRadius="5">
-            <Grid Background="Green" Margin="10" Height="100" Width="1010">
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="*" />
-                </Grid.ColumnDefinitions>
 
-                <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" Background="Transparent" BorderBrush="WhiteSmoke" 
+            <StackPanel>
+                <Border Margin="20 5" Background="Green" CornerRadius="5">
+                    <Grid Background="Green" Height="100" Width="724">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="*" />
+                        </Grid.ColumnDefinitions>
+
+                        <Border HorizontalAlignment="Center" VerticalAlignment="Center" Width="150" Height="70" Background="Transparent" BorderBrush="WhiteSmoke" 
               BorderThickness="3" Margin="-2" CornerRadius="10" Padding="5">
-                    <Border.Effect>
-                        <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
-                    </Border.Effect>
-                    <Image Source="/Assets/Images/home-xels-logo-01.png" >
+                            <Border.Effect>
+                                <DropShadowEffect ShadowDepth="0" BlurRadius="10" Opacity="50"/>
+                            </Border.Effect>
+                            <Image Source="/Assets/Images/home-xels-logo-01.png" >
 
-                    </Image>
+                            </Image>
+                        </Border>
+                    </Grid>
                 </Border>
-            </Grid>
+            </StackPanel>
+
+            <Border Margin="10 10">
+                <TextBlock Margin="0,10,0,0"  Text="Secret Words" HorizontalAlignment="Center"  FontSize="28" FontFamily="Microsoft YaHei Light" />
             </Border>
-        </StackPanel>
 
-        <Border Margin="10 10">
-            <TextBlock Margin="0,10,0,0"  Text="Secret Words" HorizontalAlignment="Center"  FontSize="28" FontFamily="Microsoft YaHei Light" />
-        </Border>
+            <Border Margin="250 15" Background="LightYellow">
 
-        <Border Margin="250 15" Background="LightYellow">
-
-            <TextBlock TextWrapping="WrapWithOverflow" Padding="10">
+                <TextBlock TextWrapping="WrapWithOverflow" Padding="10">
                     <Bold>Warning!</Bold><LineBreak/><LineBreak/>
                     Please write down you secrets words and passphrase. You will need <Bold>both</Bold> to recover your wallet in the future.
-                
-            </TextBlock> 
-        </Border>
 
-        <Border Margin="250 5" Height="120" Background="WhiteSmoke">
+                </TextBlock>
+            </Border>
 
-            <TextBlock Margin="15" x:Name="textBoxTextToMnemonic" TextWrapping="Wrap" Foreground="Green" FontSize="14" FontWeight="DemiBold" VerticalAlignment="Center" />
+            <Border Margin="250 5" Height="120" Background="WhiteSmoke">
 
-        </Border>
+                <TextBlock Margin="15" x:Name="textBoxTextToMnemonic" TextWrapping="Wrap" Foreground="Green" FontSize="14" FontWeight="DemiBold" VerticalAlignment="Center" />
 
-        <Border Margin="250 5">
-            <Button x:Name="copyClipboardButton" Click="copyClipboardButton_Click" Content="Copy" Padding="5" TextBlock.FontFamily="Microsoft YaHei Light" Background="green" Foreground="White" BorderThickness="0" FontSize="14">
-                <Button.Resources>
-                    <Style TargetType="{x:Type Border}">
-                        <Setter Property="CornerRadius" Value="5"/>
-                    </Style>
-                </Button.Resources>
-            </Button>
-        </Border>
+            </Border>
 
-        <Border Margin="250 5">
-
-            <Grid>
-
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition Width="2*" />
-                    <ColumnDefinition Width="5*" />
-                </Grid.ColumnDefinitions>
-
-                <Button x:Name="cancelButton" Click="cancelButton_Click" Grid.Column="0" Content="Cancel" VerticalAlignment="Center" Padding="5" Margin="0 0 5 0"  TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="green" BorderThickness="1" BorderBrush="green" FontSize="14" RenderTransformOrigin="0.331,0.533">
+            <Border Margin="250 5">
+                <Button x:Name="copyClipboardButton" Click="copyClipboardButton_Click" Content="Copy" Padding="5" TextBlock.FontFamily="Microsoft YaHei Light" Background="green" Foreground="White" BorderThickness="0" FontSize="14">
                     <Button.Resources>
-                        <Style TargetType="Border">
+                        <Style TargetType="{x:Type Border}">
                             <Setter Property="CornerRadius" Value="5"/>
                         </Style>
                     </Button.Resources>
                 </Button>
+            </Border>
 
-                <Button x:Name="continueButton" Click="continueButton_Click" Grid.Column="1" Content="Continue" Padding="5"  Margin="5 0 0 0"   TextBlock.FontFamily="Microsoft YaHei Light" Background="green" Foreground="White" BorderThickness="0,0,0,0" FontSize="14">
-                    <Button.Resources>
-                        <Style TargetType="Border">
-                            <Setter Property="CornerRadius" Value="5"/>
-                        </Style>
-                    </Button.Resources>
-                </Button>
+            <Border Margin="250 5">
 
-            </Grid>
+                <Grid>
 
-        </Border>
-    </StackPanel>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="2*" />
+                        <ColumnDefinition Width="5*" />
+                    </Grid.ColumnDefinitions>
 
+                    <Button x:Name="cancelButton" Click="cancelButton_Click" Grid.Column="0" Content="Cancel" VerticalAlignment="Center" Padding="5" Margin="0 0 5 0"  TextBlock.FontFamily="Microsoft YaHei Light" Background="White" Foreground="green" BorderThickness="1" BorderBrush="green" FontSize="14" RenderTransformOrigin="0.331,0.533">
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="5"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+
+                    <Button x:Name="continueButton" Click="continueButton_Click" Grid.Column="1" Content="Continue" Padding="5"  Margin="5 0 0 0"   TextBlock.FontFamily="Microsoft YaHei Light" Background="green" Foreground="White" BorderThickness="0,0,0,0" FontSize="14">
+                        <Button.Resources>
+                            <Style TargetType="Border">
+                                <Setter Property="CornerRadius" Value="5"/>
+                            </Style>
+                        </Button.Resources>
+                    </Button>
+
+                </Grid>
+
+            </Border>
+        </StackPanel>
+    </Border>
 </Page>
