--- a/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
+++ b/src/XelsDesktopWalletApp/Views/Pages/DashboardPage.xaml
@@ -317,9 +317,9 @@
                                                 <RowDefinition  Height="*"/>
                                                 <RowDefinition  Height="*"/>
                                             </Grid.RowDefinitions>
-                                            <PasswordBox Grid.Row="0" x:Name="Password" />
+                                            <PasswordBox Grid.Row="0" x:Name="Password" PasswordChanged="EnterPassword_OnChange"  />
 
-                                            <Button Grid.Row="1" x:Name="HybridMinginButton" Content="Unlock" HorizontalAlignment="Center"  Margin="5 5 0 0  " 
+                                            <Button Grid.Row="1" x:Name="HybridMinginButton" Content="Unlock" HorizontalAlignment="Center" IsEnabled="False"  Margin="5 5 0 0  " 
                                 Click="StartHybridMiningButton_Click" Foreground="#FF9B9B9B" Background="White" BorderBrush="#FF9B9B9B" >
                                                 <Button.Resources>
                                                     <Style TargetType="{x:Type Border}">
@@ -587,80 +587,122 @@
 
 
                 <!--- lower grid -->
+
                 <!--- history  -->
-                <StackPanel Margin="0 15 0 0">
+                <Grid Margin="0 10 0 0">
 
-                    <Grid>
-                        <Grid.RowDefinitions>
-                            <RowDefinition Height="2*"/>
-                            <RowDefinition Height="*"/>
-                        </Grid.RowDefinitions>
+                    <Border CornerRadius="10" Background="#ffffff" BorderBrush="Black" BorderThickness="1">
+                        <Border.Effect>
+                            <DropShadowEffect  Direction="-75" ShadowDepth="2" Opacity="0.8" BlurRadius="25" Color="Black" />                            
+                        </Border.Effect>
+                        <!--<Border.Style>
+                            <Style>
+                                <Style.Triggers>
+                                    <Trigger Property="Border.IsMouseOver" Value="True">
+                                        <Setter Property="Border.Background" Value="Green" />
+                                    </Trigger>
+                                </Style.Triggers>
+                            </Style>
+                        </Border.Style>-->
+                         
 
-                        <Border Margin="0"  Grid.Row="0" CornerRadius="8">
-                            <Grid>
-                                <ListView  x:Name="HistoryListBinding" VerticalContentAlignment="Top"  
-          ScrollViewer.VerticalScrollBarVisibility="Visible" MaxHeight="180"   ScrollViewer.CanContentScroll="False">
-                                    <ListView.View>
-                                        <GridView >
-                                            <GridViewColumn Width="150" 
-                                            DisplayMemberBinding="{Binding Path=Type}"  />
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="*"/>
+                            </Grid.RowDefinitions>
+                            <Grid x:Name="NoDataGrid" Visibility="Hidden" Grid.Row="0">
+                                <Border Background="#ccaa74" CornerRadius="15" Height="20" >
+                                    <TextBlock Text="Looks like you haven't made any transactions yet." HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="15" />
+                                </Border>
 
-                                            <GridViewColumn  Width="350" 
-                                            DisplayMemberBinding="{Binding Path= AmountWithUnit}"  />
-                                            <GridViewColumn  Width="250" 
-                                            DisplayMemberBinding="{Binding Path=Timestamp}"  />
-
-                                            <GridViewColumn>
-                                                <GridViewColumn.CellTemplate>
-                                                    <DataTemplate>
-                                                        <Button Tag="{Binding RelativeSource={RelativeSource AncestorType={x:Type ListViewItem}}}"  
-                                                Content="Details" Click="DetailsButton_Click"  Padding="5" Margin="10 0"
-                                                Background="ForestGreen" Height="30" FontSize="12" >
-                                                            <Button.Resources>
-                                                                <Style TargetType="{x:Type Border}">
-                                                                    <Setter Property="CornerRadius" Value="5"/>
-                                                                </Style>
-                                                            </Button.Resources>
-                                                        </Button>
-                                                    </DataTemplate>
-
-                                                </GridViewColumn.CellTemplate>
-
-                                            </GridViewColumn>
-                                        </GridView>
-                                    </ListView.View>
-                                    <ListView.ItemContainerStyle>
-                                        <Style TargetType="ListViewItem">
-                                            <Setter Property="HorizontalContentAlignment" Value="Center"/>
-                                            <Setter Property="Padding" Value="0"/>
-                                            <Setter Property="Margin" Value="0"/>
-                                            <Setter Property="BorderThickness" Value="0"/>
-                                        </Style>
-                                    </ListView.ItemContainerStyle>
-
-                                </ListView>
-
-
-
-                                
                             </Grid>
-                        </Border>
 
-                        <Border Grid.Row="1" Margin="5">
-                            <Button Content="Go to History" Click="GotoHistoryButton_Click" FontFamily="Microsoft YaHei Light"                                 Foreground="#FF0FD421" Background="White" BorderBrush="#FF30CD3E" FontSize="10" 
+                            <Grid x:Name="HistoryDataGrid" Grid.Row="0">
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="*"/>
+                                    <RowDefinition Height="2*"/>
+                                    <RowDefinition Height="*"/>
+                                </Grid.RowDefinitions>
+
+                                <Border Grid.Row="0" Margin="0 2">
+                                    <TextBlock Text="Latest Transaction" FontSize="12" FontWeight="DemiBold" HorizontalAlignment="Center"  />
+                                </Border>
+
+                                <Border Margin="0"  Grid.Row="01">
+
+                                    <Grid>
+                                        <DataGrid x:Name="HistoryListBinding" AutoGenerateColumns="False" IsReadOnly="True" CanUserAddRows="False" RowStyle="{DynamicResource MaterialDesignDataGridRow}" RowHeight="30" HorizontalAlignment="Center" CanUserSortColumns="False" HeadersVisibility="None" >
+
+                                            <DataGrid.Columns>
+                                                <DataGridTextColumn Width="150" 
+                                            Binding="{Binding Path=Type}">
+                                                    <DataGridTextColumn.CellStyle>
+                                                        <Style>
+                                                            <Setter Property="TextBlock.VerticalAlignment" Value="Center"/>
+                                                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center"/>
+                                                        </Style>
+                                                    </DataGridTextColumn.CellStyle>
+                                                </DataGridTextColumn>
+
+                                                <DataGridTextColumn  Width="350" 
+                                            Binding="{Binding Path= AmountWithUnit}" >
+                                                    <DataGridTextColumn.CellStyle>
+                                                        <Style>
+                                                            <Setter Property="TextBlock.VerticalAlignment" Value="Center"/>
+                                                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center"/>
+                                                        </Style>
+                                                    </DataGridTextColumn.CellStyle>
+                                                </DataGridTextColumn>
+                                                <DataGridTextColumn Width="250" 
+                                            Binding="{Binding Path=Timestamp}" >
+                                                    <DataGridTextColumn.CellStyle>
+                                                        <Style>
+                                                            <Setter Property="TextBlock.VerticalAlignment" Value="Center"/>
+                                                            <Setter Property="TextBlock.HorizontalAlignment" Value="Center"/>
+                                                        </Style>
+                                                    </DataGridTextColumn.CellStyle>
+                                                </DataGridTextColumn>
+
+                                                <DataGridTemplateColumn>
+                                                    <DataGridTemplateColumn.CellTemplate>
+                                                        <DataTemplate>
+                                                            <Button  HorizontalAlignment="Center" 
+                                                Content="Details" Click="DetailsButton_Click"  Background="ForestGreen" Height="auto" FontSize="12" Margin="-5" >
+                                                                <Button.Resources>
+                                                                    <Style TargetType="{x:Type Border}">
+                                                                        <Setter Property="CornerRadius" Value="5"/>
+
+                                                                    </Style>
+                                                                </Button.Resources>
+
+                                                            </Button>
+                                                        </DataTemplate>
+
+                                                    </DataGridTemplateColumn.CellTemplate>
+                                                </DataGridTemplateColumn  >
+                                            </DataGrid.Columns>
+
+                                        </DataGrid>
+                                    </Grid>
+                                </Border>
+
+                                <Border Grid.Row="2" Margin="0 10">
+                                    <Button Content="Go to History" Click="GotoHistoryButton_Click" Foreground="Green" Background="White" BorderBrush="Green" FontSize="12" 
                                 HorizontalAlignment="Center">
-                                <Button.Resources>
-                                    <Style TargetType="{x:Type Border}">
-                                        <Setter Property="CornerRadius" Value="2"/>
-                                    </Style>
-                                </Button.Resources>
-                            </Button>
-                        </Border>
+                                        <Button.Resources>
+                                            <Style TargetType="{x:Type Border}">
+                                                <Setter Property="CornerRadius" Value="15"/>
+                                            </Style>
+                                        </Button.Resources>
+                                    </Button>
+                                </Border>
 
 
-                    </Grid>
+                            </Grid>
+                        </Grid>
 
-                </StackPanel>
+                    </Border>
+                </Grid>
 
             </StackPanel>
         </Border>
